[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "plusclouds-cli"
version = "0.0.1"
authors = [
  { name="Semih Yönet", email="semihyonet@gmail.com" },
  { name="Zekican Budin", email="zekicanbudin@gmail.com"}
]
description = "A small example package"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"
